--- a/css/style.css
+++ b/css/style.css
@@ -6,4 +6,4 @@ nav{position: absolute;}
 
 main{position: absolute;}
 
-footer{position: absolute;}
+footer{position: absolute; bottom: 0%; left: 0%; width: 100%; height: 7%; background-color: black; color: white; text-align: center;}
