--- a/css/style.css
+++ b/css/style.css
@@ -36,8 +36,17 @@ footer{position: absolute; bottom: 0%; left: 0%; width: 100%; height: 7%; backgr
 #topOpeningLeftTopCrackFillingFour{position: absolute; left: 19%; top: 3%; width: 30%; height: 1%; background-color: white;}
 #topOpeningLeftTopCrackFillingFive{position: absolute; left: 39%; top: 4%; width: 10%; height: 2%; background-color: white;}
 
-#topOpeningRightBottomCrackFilling{position: absolute; left: 52%; top: 6%; width: 48%; height: 2%; background-color: white;}
-#topOpeningRightBottomCrackFillingTwo{position: absolute; left: 55%; top: 9%; width: 45%; height: 2%; background-color: white; transform: rotate(10deg);}
-#topOpeningRightBottomCrackFillingThree{position: absolute; left: 65%; top: 8%; width: 35%; height: 2%; background-color: white;}
-#topOpeningRightBottomCrackFillingFour{position: absolute; left: 75%; top: 8%; width: 25%; height: 3%; background-color: white; transform: rotate(10deg);}
-#topOpeningRightBottomCrackFillingFive{position: absolute; right: 0%; top: 5%; width: 2%; height: 9%; background-color: white; transform: rotate(180deg);}
+#topOpeningRightBottomCrackFilling{position: absolute; left: 52%; top: 6%; width: 49%; height: 2%; background-color: white;}
+#topOpeningRightBottomCrackFillingTwo{position: absolute; left: 55%; top: 9%; width: 46%; height: 2%; background-color: white; transform: rotate(10deg);}
+#topOpeningRightBottomCrackFillingThree{position: absolute; left: 65%; top: 8%; width: 36%; height: 2%; background-color: white;}
+#topOpeningRightBottomCrackFillingFour{position: absolute; left: 75%; top: 8%; width: 26%; height: 3%; background-color: white; transform: rotate(10deg);}
+#topOpeningRightBottomCrackFillingFive{position: absolute; right: -1%; top: 0%; width: 2%; height: 14.2%; background-color: white; transform: rotate(180deg);}
+
+#bottomOpening{position: absolute; right: -1%; bottom: 0%; width: 50%; height: 6%; background-color: white;}
+#bottomOpeningTopRightCrackFilling{position: absolute; right: -2%; bottom: 5%; width: 100%; height: 2%; background-color: white; transform: rotate(-10deg);}
+#bottomOpeningTopRightCrackFillingTwo{position: absolute; right: -1%; bottom: 6%; width: 43%; height: 2%; background-color: white;}
+#bottomOpeningTopRightCrackFillingThree{position: absolute; right: -1%; bottom: 8%; width: 30%; height: 3%; background-color: white; transform: rotate(-10deg);}
+#bottomOpeningTopRightCrackFillingFour{position: absolute; right: -1%; bottom: 8%; width: 20%; height: 2%; background-color: white;}
+#bottomOpeningBottomLeftCrackFilling{position: absolute; left: 2%; bottom: 0%; width: 49%; height: 1%; background-color: white;}
+#bottomOpeningBottomLeftCrackFillingTwo{position: absolute; left: 10%; bottom: 1%; width: 42%; height: 2%; background-color: white; transform: rotate(-10deg);}
+#bottomOpeningBottomLeftCrackFillingThree{position: absolute; left: 25%; bottom: 1%; width: 30%; height: 3%; background-color: white;}
